# White-collar-Crime-Identifier

./: LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/output/: cluster_summary_20260405.csv  cluster_summary_20260406.csv  companies_20260405.csv  companies_latest.csv  company_reports_20260405.csv  company_reports_latest.csv  enforcement_cases_20260405.csv  enforcement_cases_latest.csv  master_dataset_20260405.csv  master_dataset_latest.csv  repeat_offenders_20260405.csv  repeat_offenders_latest.csv  risk_scores_20260405.csv  risk_scores_20260406.csv  run_metadata_20260405.json  run_metadata_20260406.json  source_log_20260405.csv  source_log_latest.csv
data/output_test/: cluster_summary_latest.csv  companies_latest.csv  company_reports_20260406.csv  enforcement_cases_latest.csv  master_dataset_latest.csv  repeat_offenders_20260406.csv  risk_scores_20260406.csv  run_metadata_20260406.json  source_log_20260406.csv
data/raw/insta/: company_seed_template.csv  verified_wb_company_seed (1).csv  wb_prioritized_seed_500.csv
docs/: architecture.md  product_strategy.md
hybrid_legal_dashboard/: __init__.py  app.py  config.py  demo_data.py  download_raw_sources.py  pipeline.py  schemas.py  streamlit_app.py
hybrid_legal_dashboard/services/: __init__.py  analytics.py  chat.py  company_registries.py  extraction.py  ingestion.py  storage.py
tests/: test_pipeline.py
